Bug 5670 - linker is broken
Summary: linker is broken
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: ld (show other bugs)
Version: 2.19
: P2 critical
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-25 17:04 UTC by H.J. Lu
Modified: 2008-01-25 17:35 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2008-01-25 17:04:25 UTC
This patch:

http://sourceware.org/ml/binutils/2008-01/msg00272.html

breaks linker. On Linux/Intel64 with gcc 4.1, I got

cc1: warnings being treated as errors
/export/gnu/src/binutils/binutils/ld/ldlang.c: In function
‘process_insert_statements’:
/export/gnu/src/binutils/binutils/ld/ldlang.c:3398: warning: dereferencing
type-punned pointer will break strict-aliasing rules
/export/gnu/src/binutils/binutils/ld/ldlang.c:3405: warning: dereferencing
type-punned pointer will break strict-aliasing rules
make[4]: *** [ldlang.o] Error 1
Comment 1 H.J. Lu 2008-01-25 17:35:04 UTC
Fixed by

http://sourceware.org/ml/binutils/2008-01/msg00278.html